New option (org-latex-use-sans): Control using Sans as default font
* lisp/ox-latex.el: (org-latex-use-sans) : new defcustom
  (org-latex-make-preamble): add command to typeset using the Sans
  family after LATEX_HEADER_EXTRA if not a snippet
  and (org-latex-use-sans) is not nil
* testing/lisp/test-ox-latex.el: Two tests for (org-latex-use-sans)
* doc/org-manual.org: document (org-latex-use-sans)
* etc/ORG-NEWS: announce (org-latex-use-sans)

--- a/doc/org-manual.org
+++ b/doc/org-manual.org
@@ -14371,6 +14371,11 @@ A sample Org file with the above headers:
   some more text
 #+end_example
 
+The LaTeX backend normally exports using the Roman font family
+specified in the document class or by the user in the
+=LATEX_HEADER=. Setting the option ~org-latex-use-sans~ to =t= will
+force the LaTeX compiler to use the Sans font as default.
+
 *** Quoting LaTeX code
 :PROPERTIES:
 :DESCRIPTION: Incorporating literal @LaTeX{} code.
