--- a/doc/org-manual.org
+++ b/doc/org-manual.org
@@ -140,7 +140,7 @@ You can clone Org's repository and install Org like this:
 
 #+begin_example
 $ cd ~/src/
-$ git clone https://https.git.savannah.gnu.org/git/emacs/org-mode.git
+$ git clone https://https.git.savannah.nongnu.org/git/org-mode.git
 $ # alternatively, you can use mirror
 $ # git clone https://git.sr.ht/~bzg/org-mode
 $ cd org-mode/
