--- a/doc/org-manual.org
+++ b/doc/org-manual.org
@@ -19494,7 +19494,7 @@ blocks, see [[*Literal Examples]].  To selectively export subtrees of an
 Org document, see [[*Exporting]].
 
 #+cindex: @samp{exports}, header argument
-The =exports= header argument is to specify if that part of the Org
+The =exports= header argument specifies whether that part of the Org
 file is exported to, say, HTML or LaTeX formats.
 
 - =code= ::
@@ -19504,7 +19504,7 @@ file is exported to, say, HTML or LaTeX formats.
 
 - =results= ::
 
-  The results of evaluation of the code is included in the exported
+  The results of evaluation of the code are included in the exported
   file.  Example: =:exports results=.
 
 - =both= ::
@@ -19514,17 +19514,17 @@ file is exported to, say, HTML or LaTeX formats.
 
 - =none= ::
 
-  Neither the code nor the results of evaluation is included in the
+  Neither the code nor the results of evaluation are included in the
   exported file.  Whether the code is evaluated at all depends on
   other options.  Example: =:exports none=.
 
-If a source block is named using =NAME= keyword, the same name will be
+If a source block is named using the =NAME= keyword, the same name will be
 assigned to the results of evaluation.  This way, fuzzy links pointing
 to the named source blocks exported using =:exports results= will
 remain valid and point to the results of evaluation.
 
 Results of evaluation of a named block can also be explicitly named
-using a separate =NAME= keyword.  The name value set via =NAME=
+using a separate =NAME= keyword.  The name value set via the =NAME=
 keyword will be preferred over the parent source block.
 
 : #+NAME: code name
@@ -19540,16 +19540,16 @@ keyword will be preferred over the parent source block.
 : Another [[results name][link]] will point to the results.
 
 Explicit setting of the result name may be necessary when a named code
-block is exported using =:exports both=.  Links to such block may
-arbitrarily point either to the code block or to its results when
-results do not have a distinct name.
+block is exported using =:exports both=.  Links to such a block may
+point arbitrarily either to the code block or to its results when
+the results do not have a distinct name.
 
 Note that all the links pointing to a source block exported using
-=:exports none= will be broken.  This will make export process fail,
+=:exports none= will be broken.  This will cause the export process to fail,
 unless broken links are allowed during export (see [[*Export Settings]]).
 
 #+vindex: org-export-use-babel
-To stop Org from evaluating code blocks to speed exports, use the
+To stop Org from evaluating code blocks to speed up export, use the
 header argument =:eval never-export= (see [[*Evaluating Code Blocks]]).
 To stop Org from evaluating code blocks for greater security, set the
 ~org-export-use-babel~ variable to ~nil~, but understand that header
@@ -19561,7 +19561,7 @@ The only exception is when a code block uses =:session= - such blocks
 are evaluated according to their =:eval= header argument.
 
 Turning off evaluation comes in handy when batch processing.  For
-example, markup languages for wikis, which have a high risk of
+example, markup languages for wikis have a high risk of
 untrusted code.  Stopping code block evaluation also stops evaluation
 of all header arguments of the code block.  This may not be desirable
 in some circumstances.  So during export, to allow evaluation of just
