--- a/doc/org-manual.org
+++ b/doc/org-manual.org
@@ -15325,27 +15325,31 @@ included in the fonts used for your document.
 
 If the specified in the document class, or the fonts you specify don't
 support a specific script, the LaTeX compiler will fail and Emacs will
-warn you. To help you fix the font setup, Org will include a list of
-/problematic/ fonts with the Emacs scripts they don't support in the
-*~*Messages*~* buffer. For example:
+warn you[fn::The warning may be overwritten by other messages in the
+mini-buffer]. To help you fix the font setup, Org will include a list
+of /problematic/ fonts with the Emacs scripts they don't support in
+the *~*Warnings*~* buffer. For example:
 
 #+begin_example
-Scripts missing:
+Warning (emacs): Missing scripts:
 For font lmroman10-regular: emoji
 #+end_example
 
-In this case, you document uses a document class, which like most,
-LaTeX document classes use the ~lm...~. These fonts
-are installed with your LaTeX distribution. Most of the times,
-replacing these fonts by system fonts supporting the missing scripts
-will be enough (the Cyrillic script in the example above)[fn::Replace
-Cyrillic with your specific needs. You just need to find a Unicode
-font supporting the scripts you use in the document.].
+In the example above, the warning tells you that the document class
+you are using, like most LaTeX document classes, uses the Latin Modern
+font family, abbreviated as ~lm...~.  These fonts are installed with
+your LaTeX distribution. Most of the times, replacing these fonts by
+system fonts supporting the missing scripts will be enough. Examples
+for this are the Greek and Cyrillic scripts, which are supported in
+font families like
+[[https://www.gust.org.pl/projects/e-foundry/tex-gyre][the ~TeX Gyre~
+fonts]].
 
-When one or more scripts are not supported by your default choice (for
-example, the ~emoji~ script in the example above), you can declare
-fallback fonts with the ~:fallback~ property for the specific font
-family based on this list.
+However, there are scripts (for example, the ~emoji~ script in the
+example above), where you need to declare the system font(s) that
+provide them. These fonts, known as fallback fonts, are declared with
+the ~:fallback~ property for the specific font family that needs their
+support.
 
 The ~:fallback~ property maps Emacs script names to their fallback
 system font and optional extra configuration.
@@ -15365,9 +15369,9 @@ add the ~emoji~ script to your default font would be:
                  :fallback (("emoji" :font "Noto Color Emoji:mode=harf")))))
 #+END_SRC
 
-When Emacs detects characters belonging to the ~emoji~ character set,
-it will include the following fallback definition for the ~main~
-font[fn:55]:
+When Emacs detects characters belonging to the ~emoji~ character set
+in the document, it will include the following fallback definition for
+the ~main~ font[fn:55]:
 
 #+BEGIN_SRC latex
 \directlua{
@@ -15399,7 +15403,9 @@ When you specify ~:props~ for a font family, the fallback
 definition is appended as another feature to the font definition.
 
 Make sure to the fallback fonts for the LaTeX font families that need
-them.
+them. You can approack ~org-latex-fontspec-config~ in a grow-as-you-go
+fashion, i.e. you can use your definitions, even in the case where no
+fallbacks are needed.
 
 **** Additional settings
 :PROPERTIES:
