--- a/doc/org-manual.org
+++ b/doc/org-manual.org
@@ -3981,7 +3981,7 @@ The most important commands to work with TODO entries are:
   Select the following/preceding TODO state, similar to cycling.
   Useful mostly if more than two TODO states are possible (see
   [[*Extended Use of TODO Keywords]]).  See also [[*Packages that conflict
-  with Org mode]], for a discussion of the interaction with
+  with Org mode]] for a discussion of the interaction with
   shift-selection.  See also the variable
   ~org-treat-S-cursor-todo-selection-as-state-change~.
 
@@ -4009,7 +4009,7 @@ The most important commands to work with TODO entries are:
   buffer.  The new buffer is in Org Agenda mode, which provides
   commands to examine and manipulate the TODO entries from the new
   buffer (see [[*Commands in the Agenda Buffer]]).  See [[*The global TODO
-  list]], for more information.
+  list]] for more information.
 
 - {{{kbd(S-M-RET)}}} (~org-insert-todo-heading~) ::
 
@@ -4071,8 +4071,8 @@ and {{{kbd(S-LEFT)}}} to go forward and backward through the states.
 If you define many keywords, you can use in-buffer completion (see
 [[*Completion]]) or a special one-key selection scheme (see [[*Fast
 access to TODO states]]) to insert these words into the buffer.
-Changing a TODO state can be logged with a timestamp, see [[*Tracking
-TODO state changes]], for more information.
+Changing a TODO state can be logged with a timestamp; see [[*Tracking
+TODO state changes]] for more information.
 
 *** TODO keywords as types
 :PROPERTIES:
@@ -4153,7 +4153,7 @@ correct sequence.  In addition to typing a keyword or using completion
   above example, {{{kbd(C-u C-u C-c C-t)}}} or {{{kbd(C-S-RIGHT)}}}
   would jump from =TODO= or =DONE= to =REPORT=, and any of the words
   in the second row to =CANCELED=.  Note that the {{{kbd(C-S-)}}} key
-  binding conflict with shift-selection (see [[*Packages that conflict
+  binding conflicts with shift-selection (see [[*Packages that conflict
   with Org mode]]).
 
 - {{{kbd(S-RIGHT)}}}, {{{kbd(S-LEFT)}}} ::
@@ -4653,7 +4653,7 @@ TODO items.
   Increase/decrease the priority of the current headline[fn:: See also
   the option ~org-priority-start-cycle-with-default~.].  Note that
   these keys are also used to modify timestamps (see [[*Creating
-  Timestamps]]).  See also [[*Packages that conflict with Org mode]],
+  Timestamps]]).  See also [[*Packages that conflict with Org mode]]
   for a discussion of the interaction with shift-selection.
 
 #+vindex: org-priority-highest
@@ -4746,7 +4746,7 @@ of) subtasks (see [[*Checkboxes]]).
 Every item in a plain list[fn:16] (see [[*Plain Lists]]) can be made into
 a checkbox by starting it with the string =[ ]=.  This feature is
 similar to TODO items (see [[*TODO Items]]), but is more lightweight.
-Checkboxes are not included into the global TODO list, so they are
+Checkboxes are not included in the global TODO list, so they are
 often great to split a task into a number of simple steps.  Or you can
 use them in a shopping list.
 
@@ -4768,9 +4768,9 @@ Here is an example of a checkbox list.
 #+cindex: @samp{COOKIE_DATA}, property
 #+vindex: org-checkbox-hierarchical-statistics
 The =[2/4]= and =[1/3]= in the first and second line are cookies
-indicating how many checkboxes present in this entry have been checked
+indicating how many of the checkboxes present in this entry have been checked
 off, and the total number of checkboxes present.  This can give you an
-idea on how many checkboxes remain, even without opening a folded
+idea of how many checkboxes remain, even without opening a folded
 entry.  The cookies can be placed into a headline or into (the first
 line of) a plain list item.  Each cookie covers checkboxes of direct
 children structurally below the headline/item on which the cookie
